--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@ $(document).ready(function () {
 </div>
 
 
-<pre><code>## Warning: package 'ggplot2' was built under R version 3.3.2</code></pre>
-<pre><code>## Warning: package 'GGally' was built under R version 3.3.2</code></pre>
+<pre class="r"><code>library(ggplot2)
+library(&quot;GGally&quot;)
+library(corrplot)
+library(dplyr)</code></pre>
 <pre><code>## 
 ## Attaching package: 'dplyr'</code></pre>
 <pre><code>## The following object is masked from 'package:GGally':
